--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,25 @@
+/*
+ * Base structure
+ */
+
+html,
+body {
+  height: 100%;
+  background-color: #C4F1FF;
+  font-family: Helvetica, sans-serif;
+}
+body {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+
 .cover-heading, .lead, .lead > .btn {
 	color: #333;
 	text-shadow: none;
+}
+
+.cover p{
+	font-size: 24px;
 }
