--- a/css/global.css
+++ b/css/global.css
@@ -62,6 +62,10 @@ a:hover, a:focus {
   font-size: 15px;
   color: #555;
 }
+#navbar ul > li > a:hover, #navbar ul > li > a:focus {
+  text-decoration: none;
+  background-color: transparent;
+}
 #navbar-inner h4 {
 	float: right;
 }
