--- a/css/global.css
+++ b/css/global.css
@@ -15,14 +15,15 @@ a:hover, a:focus {
 	width: 100%;
 	height: 100%;
 	min-height: 100%;
-	background: #7abcff; /* Old browsers */
-	background: -moz-linear-gradient(top,  #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
+	background: #b271e7; /* Old browsers */
+background: -moz-linear-gradient(top,  #b271e7 0%, #9c5ec8 100%, #8449a9 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b271e7), color-stop(100%,#9c5ec8), color-stop(100%,#8449a9)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #b271e7 0%,#9c5ec8 100%,#8449a9 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #b271e7 0%,#9c5ec8 100%,#8449a9 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #b271e7 0%,#9c5ec8 100%,#8449a9 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #b271e7 0%,#9c5ec8 100%,#8449a9 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b271e7', endColorstr='#8449a9',GradientType=0 ); /* IE6-9 */
+
 
 }
 
@@ -44,7 +45,6 @@ a:hover, a:focus {
 
 #navbar {
 	background-color: #ffffff;
-	padding-bottom: 20px;
 	z-index: 10;
 }
 #navbar-inner {
@@ -52,11 +52,10 @@ a:hover, a:focus {
 	text-align: center;
 	margin: 0 auto;
 }
-#navbar-inner h3 {
-	margin-top: 8px;
-	margin-bottom: 8px;
-	font-size: 30px;
-	color: #444;
+#navbar-inner a img {
+	margin-top: -13px;
+	height: 80px;
+	width: 145px;
 }
 #navbar-inner ul > li {
   display: inline-block;
