--- a/css/global.css
+++ b/css/global.css
@@ -15,15 +15,7 @@ a:hover, a:focus {
 	width: 100%;
 	height: 100%;
 	min-height: 100%;
-	background: #b97ee6; /* Old browsers */
-background: -moz-linear-gradient(top,  #b97ee6 0%, #c39bed 0%, #c39bed 99%, #c39bed 99%, #d9c2f4 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b97ee6), color-stop(0%,#c39bed), color-stop(99%,#c39bed), color-stop(99%,#c39bed), color-stop(100%,#d9c2f4)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #b97ee6 0%,#c39bed 0%,#c39bed 99%,#c39bed 99%,#d9c2f4 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #b97ee6 0%,#c39bed 0%,#c39bed 99%,#c39bed 99%,#d9c2f4 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #b97ee6 0%,#c39bed 0%,#c39bed 99%,#c39bed 99%,#d9c2f4 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #b97ee6 0%,#c39bed 0%,#c39bed 99%,#c39bed 99%,#d9c2f4 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b97ee6', endColorstr='#d9c2f4',GradientType=0 ); /* IE6-9 */
-
+	background-color: #694489;
 }
 
 #container {
