hr tag, sidebar filter

--- a/css/global.css
+++ b/css/global.css
@@ -46,7 +46,10 @@ a:hover, a:focus {
 	text-align: center;
 	margin: 0 auto;
 }
-#navbar-inner a img {
+#nav-brand {
+	display: inline-block;
+}
+#nav-brand img {
 	margin-top: -13px;
 	height: 80px;
 	width: 145px;
@@ -71,13 +74,18 @@ a:hover, a:focus {
 	border-color: #aaa;
 }
 
+#navbar hr {
+	margin-top: 70px;
+	margin-bottom: 0;
+}
+
 @media (min-width: 768px) {
   #navbar {
     top: 0;
     width: 100%;
     vertical-align: middle;
   }
-  #navbar-inner h3  {
+  #nav-brand  {
     float: left;
   }
   #navbar-inner ul {
@@ -93,7 +101,7 @@ a:hover, a:focus {
 
 
 /*
- * Navbar
+ * Content
  */
 
  #content {
