--- a/css/itemPage.css
+++ b/css/itemPage.css
@@ -10,12 +10,13 @@
   margin-left: -250px;
   left: 250px;
   width: 250px;
-  background: #eee;
+  background: #ffffff;
   position: absolute;
   height: 100%;
   overflow-y: auto;
   z-index: 1000;
   transition: all 0.4s ease 0s;
+  border: 1px solid #eee;
 }
 .sidebar-nav {
   position: absolute;
@@ -23,18 +24,6 @@
   list-style: none;
   margin: 0;
   padding: 0;
-}
-
-.sidebar-nav li {
-  line-height: 40px;
-  text-indent: 20px;
-}
-
-.sidebar-nav li p {
-  margin-bottom: 0;
-  color: #555;
-  display: block;
-  text-decoration: none;
 }
 
 .sidebar-nav > .sidebar-brand {
@@ -46,21 +35,51 @@
 
 .sidebar-nav > .sidebar-brand h4 {
   color: #444;
-  font-size: 23px;
 }
 
-.slider {
-  margin-left: 25px;
-}
-
-.sidebar-nav li span {
-  display: block;
+#price-bar {
+  margin-left: 150px;
+  width: 60px;
+  height: 40px;
   border: none;
+}
+
+#price-bar:text {
+  vertical-align: middle;
+}
+
+.sidebar-nav li {
+  line-height: 40px;
+  text-indent: 20px;
+}
+
+.sidebar-nav li p {
+  margin-bottom: 0;
+  display: block;
+  text-decoration: none;
+}
+
+.sidebar-nav li > p {
+  color: #694489;
 }
 
 .sidebar-nav li span p {
   display: inline-block;
-  font-size: 11px;
+  font-size: 12px;
+  font-size: ;
+  color: #555;
+}
+
+.sidebar-nav li span {
+  background-color: inherit;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  display: block;
+  border: none;
+}
+
+.slider {
+  margin-left: 25px;
 }
 
 @media (max-width:767px) {
