--- a/css/global.css
+++ b/css/global.css
@@ -106,7 +106,7 @@ a:hover, a:focus {
 
  #content {
   background-color: #ffffff;
-  height: 100%;
+  height: calc(100% - 121px);
 }
 
 @media (min-width: 768px) {
