--- a/css/book.css
+++ b/css/book.css
@@ -1,5 +1,18 @@
-#content {
+/*
+ * Content
+ */
+
+ #content {
   padding-left: 250px;
+  background-color: #ffffff;
+  height: calc(100% - 93px);
+}
+
+@media (min-width: 768px) {
+  #content {
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 
 /*
