--- a/css/index.css
+++ b/css/index.css
@@ -2,30 +2,56 @@
 	background-color: #ffffff;
 }
 
-#navbar #navbar-inner .nav #index-sell a {
-	padding: 8px;
-	background-color: #694489;
-	border: 1px solid #694489;
-	border-color: #694489;
-	color: #ffffff;
-	font-size: 13px;
-}
-
 .container {
 	text-align: center;
 	height: 100%;
 }
 
 .container img {
-	margin-top: 15%;
-	height: 200px;
- 	width: 363px;
- 	margin-bottom: 20px;
+	margin-top: 19%;
+ 	margin-bottom: 30px;
+ 	width: 315px;
+ 	height: 173px;
  }
 
-.input-group {
-	width: 650px;
+.container .input-group {
+	width: 315px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
+}
+
+#sell {
+	position: relative;
+	margin-top: 10px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 315px;
+	line-height: 34px;
+	vertical-align: middle;
+	color: #ffffff;
+	font-size: 15px;
+	background-color: #8f6aa9;
+	border: 1px solid #8f6aa9;
+	border-radius: 4px;
+}
+
+#sell span {
+	position: absolute;
+	z-index: 1;
+	top:0;
+  	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+@media (min-width: 768px) {
+  .container img {
+  	margin-top: 15%;
+  	width: 363px;
+  	height: 200px;
+  }
+  .container .input-group, #sell {
+  	width: 650px;
+  }
 }
