--- a/css/message.css
+++ b/css/message.css
@@ -29,7 +29,7 @@
 	content: '';
 	position: absolute;
 	border-style: solid;
-	border-width: 15px 0 15px 15px;
+	border-width: 15px 1px 15px 15px;
 	border-color: transparent #D3E5FE;
 	display: block;
 	width: 0;
@@ -94,13 +94,16 @@
 	left: -16px;
 	top: 10px;
 }
+
 #chatText {
 	margin-left:5px;
 	margin-right:5px;
 }
+
 #receiver-container{
     width: 600px;
 }
+
 #receiver-container >  img, #container > div {
     display: inline-block;
 }
