--- a/css/searchResults.css
+++ b/css/searchResults.css
@@ -1,9 +1,11 @@
-.my-container { margin: 50px 50px;}
-.lead 
-{ 
-	margin: 20px 60px;
+.my-container { margin: 0px 50px;}
+
+.navbar, .lead 
+{
+	margin: 10px 70px;
 	font-size: 14px;
 }
+
 
 .box ul { list-style-type: none; }
 
@@ -12,7 +14,7 @@
 	height: 450px;
 	width: 245px;
 
-	margin: 30px 15px;
+	margin: 0px 15px;
 	padding: 10px 15px;
 	display: inline-block;
 	vertical-align: top;
@@ -52,7 +54,7 @@
 .details
 {
 	width: 100%;
-	margin: 10px auto;
+	margin: 0px auto;
 	overflow: hidden;
 }
 
