index, sell ready, responsive

--- a/css/book.css
+++ b/css/book.css
@@ -1,7 +1,6 @@
 /*
  * Content
  */
-
  #content {
   padding-left: 250px;
   background-color: #ffffff;
@@ -15,10 +14,10 @@
   }
 }
 
+
 /*
  * Sidebar
  */
-
  #sidebar-wrapper {
   margin-left: -250px;
   left: 250px;
@@ -39,51 +38,42 @@
   margin: 0;
   padding: 0;
 }
-
 .sidebar-nav > .sidebar-brand {
   margin-top: 30px;
   height: 30px;
   line-height: 60px;
   font-size: 18px;
 }
-
 .sidebar-nav > .sidebar-brand h4 {
   color: #444;
 }
-
 #price-bar {
   margin-left: 150px;
   width: 60px;
   height: 40px;
   border: none;
 }
-
 #price-bar:text {
   vertical-align: middle;
 }
-
 .sidebar-nav li {
   line-height: 40px;
   text-indent: 20px;
 }
-
 .sidebar-nav li p {
   margin-bottom: 0;
   display: block;
   text-decoration: none;
 }
-
 .sidebar-nav li > p {
   color: #694489;
 }
-
 .sidebar-nav li span p {
   display: inline-block;
   font-size: 12px;
   font-size: ;
   color: #555;
 }
-
 .sidebar-nav li span {
   background-color: inherit;
   padding-top: 2px;
@@ -91,82 +81,66 @@
   display: block;
   border: none;
 }
-
 .slider {
   margin-left: 21px;
 }
 
-@media (max-width:767px) {
-
-#content {
-  padding-left: 0;
-}
-
-#sidebar-wrapper {
-  left: 0;
-}
-
-#wrapper.active {
-  position: relative;
-  left: 250px;
-}
-
-#wrapper.active #sidebar-wrapper {
-  left: 250px;
-  width: 250px;
-  transition: all 0.4s ease 0s;
-}
-
-#menu-toggle {
-  display: inline-block;
-}
-
-.inset {
-  padding: 15px;
-}
-
+@media (max-width:768px) {
+  #content {
+    padding-left: 0;
+  }
+  #sidebar-wrapper {
+    left: 0;
+  }
+  #wrapper.active {
+    position: relative;
+    left: 250px;
+  }
+  #wrapper.active #sidebar-wrapper {
+    left: 250px;
+    width: 250px;
+    transition: all 0.4s ease 0s;
+  }
+  #menu-toggle {
+    display: inline-block;
+  }
+  .inset {
+    padding: 15px;
+  }
 }
 
 
 /*
  * Content
  */
-
 #book-image, #book-title-info {
   display: inline-block;
 }
-
 #book-image {
   float: left;
   margin-top: 30px;
-  margin-left: 80px;
+  margin-left: 30px;
 }
-
 #book-image img {
-  width: 171.2px;
-  height: 240px;
+  width: 130px;
+  height: 182px;
 }
-
 #book-title-info {
-  height: 250px;
+  width: 180px;
+  height: 182px;
   margin-top: 20px;
-  margin-left: 50px;
+  margin-left: 25px;
 }
-
-#title, #edition {
-  display: inline-block;
-  margin-bottom: 5px;
+#title {
+  font-size: 20px;
 }
-
 #edition {
-  margin-left: 5px;
   font-size: 15px;
 }
-
 #author {
   margin-top: 5px;
+  font-size: 15px;
 }
-
 #price-range {
   margin-top: 20px;
   width: 150px;
@@ -178,7 +152,6 @@
   border-radius: 10px;
   background-color: #694489;
 }
-
 table tr td:nth-child(1) {
   width: calc(100% / 4.08);
 }
@@ -188,67 +161,89 @@ table tr td:nth-child(2) {
 table tr td:nth-child(3) {
   width: calc(100% / 3.49);
 }
-
 #categories {
-  width: calc(100% - 159px);
+  width: calc(100% - 70px);
   margin-top: 40px;
   margin-right: auto;
   margin-bottom: 0;
   margin-left: auto;
 }
-
 #categories tr {
   font-weight: bold;
   border-bottom: 1px solid #ddd;
 }
-
 #categories tr > td {
   border-top: none;
 }
-
-
 #seller-list {
   margin-left: auto;
   margin-right: auto;
-  width: calc(100% - 160px);
-  height: calc(100% - 372px);
-  overflow-y: scroll;
+  width: calc(100% - 71px);
   padding-bottom: 20px;
   border: none;
 }
-
-#seller-list::-webkit-scrollbar {
-    width: 12px;
-}
- 
-#seller-list::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
-}
- 
-#seller-list::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-}
-
 #seller-list table {
   width: 100%;
   margin: 0 auto;
   table-layout: fixed;
 }
-
 #seller-list table td {
   font-size: 15px;
 }
-
 #seller-list table tr .amazon {
   background-color: #c60;
 }
-
 #seller-list .btn {
   margin-top: 0;
   padding: 5px;
   background-color: #428bca;
   color: #ffffff;
   font-size: 15px;
+}
+
+@media (min-width: 922px) {
+  #book-image {
+    margin-left: 80px;
+  }
+  #book-image img {
+    width: 171.2px;
+    height: 240px;
+  }
+  #book-title-info {
+    margin-left: 50px;
+    width: 370px;
+    height: 250px;
+  }
+  #title, #edition {
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+  #title {
+    font-size: 30px;
+  }
+  #edition {
+    margin-left: 5px;
+  }
+  #author {
+    font-size: 18px;
+  }
+  #categories {
+    width: calc(100% - 159px);
+  }
+  #seller-list {
+    width: calc(100% - 160px);
+    height: calc(100% - 380px);
+    overflow-y: scroll;
+  }
+  #seller-list::-webkit-scrollbar {
+    width: 12px;
+  }
+  #seller-list::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+  }
+  #seller-list::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  }
 }
