--- a/css/index.css
+++ b/css/index.css
@@ -16,28 +16,21 @@
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
+	border-radius: 4px;
 }
-#sell {
-	position: relative;
+.container a {
+	display: inline-block;
 	margin-top: 10px;
-	margin-right: auto;
-	margin-left: auto;
-	width: 290px;
+	width: 100px;
 	line-height: 34px;
-	vertical-align: middle;
 	color: #ffffff;
 	font-size: 15px;
 	background-color: #8f6aa9;
 	border: 1px solid #8f6aa9;
 	border-radius: 4px;
 }
-#sell span {
-	position: absolute;
-	z-index: 1;
-	top:0;
-  	left: 0;
-	width: 100%;
-	height: 100%;
+.container a + a {
+	margin-left: 20px;
 }
 
 @media (min-width: 768px) {
