home large done, light font

--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,7 @@
 	line-height: 34px;
 	color: #ffffff;
 	font-size: 15px;
+	font-weight: lighter;
 	background-color: #8f6aa9;
 	border: 1px solid #8f6aa9;
 	border-radius: 4px;
