--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
 	height: 100%;
 }
 .container img {
-	margin-top: 19%;
+	margin-top: 110px;
  	margin-bottom: 30px;
  	width: 290px;
  	height: 159px;
@@ -36,7 +36,7 @@
 
 @media (min-width: 768px) {
   .container img {
-  	margin-top: 15%;
+  	margin-top: 18%;
   	width: 363px;
   	height: 200px;
   }
