--- a/css/sell.css
+++ b/css/sell.css
@@ -5,20 +5,36 @@
 	padding: 0 20px;
 }
 @media (min-width: 768px) {
-	#container {
+	#top-nav {
 		padding: 0 120px;
+	}
+	#container {
+		padding: 0;
 	}
 }
 #outline {
-	margin-top: 30px;
-	margin-right: auto;
-	margin-left: auto;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	width: 440px;
-	background: rgb(133, 96, 159);
-	background: rgba(133, 96, 159, 0.25);
+	padding-top: 14px;
+	padding-bottom: 30px;
+	width: 100%;
+	background-color: #e0d7e6;
 	border-radius: 4px;
+}
+
+
+/*
+ * Example image
+ */
+
+#example {
+	float: right;
+	margin-top: 30px;
+	margin-right: 230px;
+	box-shadow: -5px 5px 5px #888888;
+}
+#example img {
+	width: 298px;
+	height: 400px;
+	border: 1px solid #ddd;
 }
 
 
@@ -26,22 +42,17 @@
  * Main form
  */
 #info {
-	margin-right: auto;
-	margin-left: auto;
-	width: 400px;
+	margin: 0 10%;
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	background-color: #ffffff;
 }
 #info #facebook {
-	margin-top: 5px;
-	margin-bottom: 5px;
-	margin-right: auto;
-	margin-left: auto;
-	width: 380px;
+	margin: 10px 0 5px 30px;
+	width: 300px;
 	height: 60px;
 	background-color: #3b5b95;
-	border-radius: 4px;
+	border-radius: 2px;
 }
 #info #facebook i {
 	padding: 17px 15px 17px 20px;
@@ -50,51 +61,78 @@
 	border-right: 1px solid #333;
 }
 #info #facebook span {
-	padding-top: 22px;
-	padding-right: 45px;
-	padding-bottom: 18px;
-	padding-left: 45px;
-	font-size: 17px;
+	padding: 22px 20px 18px 20px;
+	font-size: 15px;
 	color: #ffffff;
 }
 #info > h3 {
 	margin: 0;
-	padding: 25px 12px 15px 12px;
-	font-size: 19px;
+	padding: 35px 12px 10px 30px;
+	font-size: 24px;
 	font-weight: heavy;
 	color: #666;
-	border: 1px solid #ccc;
-	border-style: solid none solid none;
 }
-#info > input, #info #condition h3 {
+#info > h6 {
+	margin: 0;
+	padding: 0 0 10px 30px;
+	font-weight: heavy;
+	color: #7F1606;
+}
+#info .btn-group {
+	margin-top: 20px;
+	margin-bottom: 15px;
+}
+#info button {
+	background-color: #F7F7F7;
+	color: #666;
+	border-color: #ccc;
+	border-radius: 2px;
+}
+#info h6 + .btn-group {
+	margin-left: 30px;
+}
+#info > input {
+	margin-left: 30px;
 	padding: 13px 12px;
-	width: 398px;
-	border-style: solid none none none;
-	border-top: 1px solid #ccc;
+	width: 500px;
+	border: 1px solid #ccc;
+	border-style: solid solid solid solid;
+	border-radius: 2px;
 	font-size: 14px;
 }
-#info .half {
-	display: inline-block;
-	width: 197px;
-	border-top: none;
-}
-#info .half + .half {
-	border-left: 1px solid #ccc;
-}
-#info #condition h6 {
-	display: inline-block;
-	padding-left: 3px;
-	width: 130px;
+#info > br + input {
+	margin-top: 8px;
 }
 #info #condition h3, #info #condition h6 {
 	margin: 0;
 	color: #666;
 }
+#info #condition h3 {
+	margin-left: 30px;
+	padding-top: 15px;
+	padding-bottom: 10px;
+	font-size: 16px;
+}
+#info #condition h6 {
+	display: inline-block;
+	padding-left: 7px;
+	font-size: 13px;
+}
 #info #condition h3 + input, #info #condition br + input {
-	margin-left: 20px;
+	margin-left: 32px;
 }
 #info #condition h6 + input {
 	margin-left: 10px;
+}
+#info #submit {
+	margin: 0 0 20px 430px;
+	width: 100px;
+	height: 40px;
+	background-color: #177F2E;
+	border: none;
+	border-radius: 2px;
+	font-size: 14px;
+	color: #ffffff;
 }
 
 
