sell page fully responsive ayyyyyy

--- a/css/global.css
+++ b/css/global.css
@@ -37,6 +37,9 @@ a:hover, a:focus {
   background-color: #ffffff;
   border: none;
 }
+#top-nav .navbar-header button {
+  margin-top: 25px;
+}
 #top-nav .navbar-brand {
   padding: 0;
   height: 80px;
