--- a/css/sell.css
+++ b/css/sell.css
@@ -4,20 +4,29 @@
 #container {
 	padding: 0 20px;
 }
-@media (min-width: 768px) {
-	#top-nav {
-		padding: 0 120px;
-	}
-	#container {
-		padding: 0;
-	}
-}
 #outline {
 	padding-top: 14px;
 	padding-bottom: 30px;
 	width: 100%;
-	background-color: #e0d7e6;
+	background-color: #ffffff;
 	border-radius: 4px;
+}
+@media (min-width: 500px) {
+	#container {
+		padding: 0;
+	}
+	#outline {
+		background-color: #e0d7e6;
+	}
+	#info {
+		border: 1px solid #ccc;
+		border-radius: 4px;
+	}
+}
+@media (min-width: 768px) {
+	#top-nav {
+		padding: 0 120px;
+	}
 }
 
 
@@ -26,15 +35,35 @@
  */
 
 #example {
+	display: none;
 	float: right;
 	margin-top: 30px;
-	margin-right: 230px;
+	margin-right: 140px;
 	box-shadow: -5px 5px 5px #888888;
 }
 #example img {
-	width: 298px;
-	height: 400px;
+	width: 261px;
+	height: 350px;
 	border: 1px solid #ddd;
+}
+@media (min-width: 922px) {
+	#example {
+		display: block;
+	}
+}
+@media (min-width: 1050px) {
+	#example {
+		margin-right: 180px;
+	}
+	#example img {
+		width: 298px;
+		height: 400px;
+	}
+}
+@media (min-width: 1250px) {
+	#example {
+		margin-right: 230px;
+	}
 }
 
 
@@ -42,45 +71,46 @@
  * Main form
  */
 #info {
-	margin: 0 10%;
-	border: 1px solid #ccc;
-	border-radius: 4px;
+	margin: 0;
 	background-color: #ffffff;
 }
 #info #facebook {
 	margin: 10px 0 5px 30px;
-	width: 300px;
-	height: 60px;
+	width: 220px;
+	height: 50px;
 	background-color: #3b5b95;
 	border-radius: 2px;
 }
 #info #facebook i {
 	padding: 17px 15px 17px 20px;
-	font-size: 25px;
+	font-size: 15px;
 	color: #ffffff;
 	border-right: 1px solid #333;
 }
 #info #facebook span {
-	padding: 22px 20px 18px 20px;
-	font-size: 15px;
+	padding: 22px 10px 18px 10px;
+	font-size: 11px;
 	color: #ffffff;
 }
 #info > h3 {
 	margin: 0;
 	padding: 35px 12px 10px 30px;
 	font-size: 24px;
-	font-weight: heavy;
 	color: #666;
 }
 #info > h6 {
 	margin: 0;
 	padding: 0 0 10px 30px;
-	font-weight: heavy;
 	color: #7F1606;
 }
 #info .btn-group {
 	margin-top: 20px;
-	margin-bottom: 15px;
+	margin-right: 70px;
+	margin-bottom: 5px;
+	margin-left: 30px;
+}
+#info .btn-group + .btn-group {
+	margin-top: 8px;
 }
 #info button {
 	background-color: #F7F7F7;
@@ -94,7 +124,7 @@
 #info > input {
 	margin-left: 30px;
 	padding: 13px 12px;
-	width: 500px;
+	width: 260px;
 	border: 1px solid #ccc;
 	border-style: solid solid solid solid;
 	border-radius: 2px;
@@ -125,7 +155,7 @@
 	margin-left: 10px;
 }
 #info #submit {
-	margin: 0 0 20px 430px;
+	margin: 0 0 20px 190px;
 	width: 100px;
 	height: 40px;
 	background-color: #177F2E;
@@ -133,6 +163,52 @@
 	border-radius: 2px;
 	font-size: 14px;
 	color: #ffffff;
+}
+@media (min-width: 500px) {
+	#info {
+		margin: 0 10%;
+	}
+	#info #facebook {
+		width: 300px;
+		height: 60px;
+	}
+	#info #facebook i {
+		font-size: 25px;
+	}
+	#info #facebook span {
+		padding: 22px 20px 18px 20px;
+		font-size: 15px;
+	}
+	#info >input {
+		width: 300px;
+	}
+	#info .btn-group {
+		margin-right: 0;
+		margin-bottom: 15px;
+		margin-left: 0;
+	}
+	#info .btn-group + .btn-group {
+		margin-top: 20px;
+	}
+	#info #submit {
+		margin: 0 0 20px 230px;
+	}
+}
+@media (min-width: 1050px) {
+	#info > input {
+		width: 400px;
+	}
+	#info #submit {
+		margin: 0 0 20px 330px;
+	}
+}
+@media (min-width: 1250px) {
+	#info > input {
+		width: 500px;
+	}
+	#info #submit {
+		margin: 0 0 20px 430px;
+	}
 }
 
 
